--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <div id="footer_pad" class="pad no_padding no_shadow"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
+    <script src="scripts/main.js" defer></script>
 
 </body>
 
