--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title id="title">RW式码字器</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes" />
+    <link rel="stylesheet" href="https://richadowonosas.github.io/css/base.css" />
+    <link rel="stylesheet" href="https://richadowonosas.github.io/css/drawer.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="css/Riomon.svg" />
 </head>
@@ -36,7 +38,7 @@
     <div id="footer_pad" class="pad no_padding no_shadow"></div>
 
     <script src="scripts/tps/marked.min.js" defer></script>
-    <script src="scripts/main.js" defer></script>
+    <script src="scripts/main.js" defer type="module"></script>
 
 </body>
 
