--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://richadowonosas.github.io/css/base.css" />
     <link rel="stylesheet" href="https://richadowonosas.github.io/css/drawer.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="css/Riomon.svg" />
+    <link rel="icon" href="https://richadowonosas.github.io/img/base/Riomon.svg" />
 </head>
 
 <body>
