--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-<html>
 
 <head>
     <title id="title">RW式码字器</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes" />
-    <link rel="stylesheet" href="https://richadowonosas.github.io/css/base.css" />
-    <link rel="stylesheet" href="https://richadowonosas.github.io/css/drawer.css" />
+    <link rel="stylesheet" href="../css/base.css" />
+    <link rel="stylesheet" href="../css/drawer.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="https://richadowonosas.github.io/img/base/Riomon.svg" />
+    <link rel="icon" href="../img/base/Riomon.svg" />
 </head>
 
 <body>
-    <!-- Fixed part -->
-    <!-- <p id="header">
-        <span id="head_text">欢迎使用...</span>
-    </p> -->
     <p id="footer">
         <span id="foot_text">RichadoWonosas 2023</span>
         <noscript id="text_noscript">注意：请启用JavaScript或者更换能够使用JavaScript的浏览器。</noscript>
@@ -23,12 +18,10 @@
     <div id="div_bg" class="no_padding no_shadow"></div>
 
     <!-- Main page -->
-    <!-- <div id="header_pad" class="pad no_padding no_shadow"></div> -->
-
     <div id="root_div">
         <div class="line_container">
             <div id="root_page">
-                <textarea id="md_content"></textarea>
+                <label for="md_content"></label><textarea id="md_content"></textarea>
                 <span id="word_count">字数：0</span>
             </div>
             <article id="art_main"></article>
@@ -37,9 +30,6 @@
 
     <div id="footer_pad" class="pad no_padding no_shadow"></div>
 
-    <script src="scripts/tps/marked.min.js" defer></script>
-    <script src="scripts/main.js" defer type="module"></script>
+    <script src="scripts/main.js" type="module" defer></script>
 
 </body>
-
-</html>
